--- a/code_generator_admin/pom.xml
+++ b/code_generator_admin/pom.xml
@@ -88,4 +88,14 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+        <finalName>code-generator</finalName>
+    </build>
 </project>
