--- a/code_generator_admin/pom.xml
+++ b/code_generator_admin/pom.xml
@@ -16,6 +16,7 @@
         <mysql.version>8.2.0</mysql.version>
         <postgresql.version>42.7.7</postgresql.version>
         <freemarker.version>2.3.34</freemarker.version>
+        <openapi.version>2.8.0</openapi.version>
     </properties>
 
     <parent>
@@ -86,6 +87,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <!-- openapi -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${openapi.version}</version>
         </dependency>
     </dependencies>
 
