--- a/code_generator_ui/package.json
+++ b/code_generator_ui/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
+    "npm-run-all": "^4.1.5",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
